--- a/AutomationPractice/AutomationPractice.csproj
+++ b/AutomationPractice/AutomationPractice.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="WebDriverManager" Version="2.11.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="source\main\" />
+  </ItemGroup>
+
 </Project>
